[package]
name = "uok-server"
version = "0.1.0"
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]

[dependencies]
env_logger = "0.5"
log = "0.4"
failure = "0.1"
rouille = "2"
chrono = {version="0.4", features=["serde"]}
structopt = "0.2"
regex = "1"
lazy_static = "1.1"
serde = "1"
serde_derive = "1"
r2d2_sqlite = "0.5"
r2d2 = "0.8"
